--- a/code/ArcadiaBox/Frontend/views/score.html
+++ b/code/ArcadiaBox/Frontend/views/score.html
@@ -27,7 +27,7 @@
 
     <!-- BUTTONS -->
     <div class="buttons">
-      <a class="btn" href="test.html">🎮 Changer de jeu</a>
+      <a class="btn" href="swapScore.html">🎮 Changer de jeu</a>
       <a class="btn" href="index.html">🏠 Menu principal</a>
     </div>
   </main>
