--- a/code/ArcadiaBox/Frontend/views/snake.html
+++ b/code/ArcadiaBox/Frontend/views/snake.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Snake</title>
-    <link rel="stylesheet" href="../style/snake.css">
+    <link rel="stylesheet" href="../styles/snake.css">
 </head>
 <body>
     <div class="top-bar" role="navigation" aria-label="barre supérieure">
