--- a/code/ArcadiaBox/Frontend/views/score.html
+++ b/code/ArcadiaBox/Frontend/views/score.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Tableau des Scores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/score.css" />
+  <link rel="stylesheet" href="../assets/score.css" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   </main>
 
   <script type="module">
-    import { initScoreTable } from './controllers/ScoreTableController.js';
+    import { initScoreTable } from '../controllers/ScoreTableController.js';
     
     // Initialiser au chargement de la page
     window.addEventListener('load', () => {
