--- a/code/ArcadiaBox/Frontend/views/swapScore.html
+++ b/code/ArcadiaBox/Frontend/views/swapScore.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Sélection de jeu - Scores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/score.css" />
+  <link rel="stylesheet" href="../assets/score.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="buttons" style="margin-top: 30px;">
-      <a class="btn" href="index.html">🏠 Retour au menu principal</a>
+      <a class="btn" onclick="window.location.href='../index.html'">🏠 Retour au menu principal</a>
     </div>
   </main>
 </body>
