--- a/code/ArcadiaBox/Frontend/views/galaga.html
+++ b/code/ArcadiaBox/Frontend/views/galaga.html
@@ -10,7 +10,7 @@
     <!-- Top bar with corner buttons -->
     <div class="top-bar">
         <button class="btn btn-home" onclick="window.location.href='../index.html'">🏠 Accueil</button>
-        <button class="btn btn-scores" onclick="window.location.href='../scores.html'">🏆 Scores</button>
+        <button class="btn" id="scores-btn" type="button" onclick="window.location.href='score.html?game=Galaga'">Tableau des scores</button>
     </div>
 
     <div id="game-container">
