--- a/code/ArcadiaBox/Frontend/views/score.html
+++ b/code/ArcadiaBox/Frontend/views/score.html
@@ -28,7 +28,8 @@
     <!-- BUTTONS -->
     <div class="buttons">
       <a class="btn" href="swapScore.html">🎮 Changer de jeu</a>
-      <a class="btn" href="index.html">🏠 Menu principal</a>
+      <!-- <a class="btn" href="index.html">🏠 Menu principal</a> -->
+      <button class="btn" id="home-btn" onclick="window.location.href='../index.html'">🏠 Menu principal</button>
     </div>
   </main>
 
