--- a/code/ArcadiaBox/Frontend/views/snake.html
+++ b/code/ArcadiaBox/Frontend/views/snake.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="top-bar" role="navigation" aria-label="barre supérieure">
-        <button class="btn" id="home-btn" type="button">Accueil</button>
+        <!-- <button class="btn" id="home-btn" type="button">Accueil</button> -->
+        <button class="btn" id="home-btn" onclick="window.location.href='../index.html'">🏠 Accueil</button>
         <button class="btn" id="scores-btn" type="button" onclick="window.location.href='score.html?game=Snake'">Tableau des scores</button>
     </div>
 
