--- a/code/ArcadiaBox/Frontend/views/swapScore.html
+++ b/code/ArcadiaBox/Frontend/views/swapScore.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Sélection de jeu - Scores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../assets/score.css" />
+  <link rel="stylesheet" href="../styles/score.css" />
 </head>
 
 <body>
